@@ -2,6 +2,8 @@ $Id$
 
 2.0.1-pre-1
 	Moved the (broken) newmsgproc stuff it a function procedure
+	Added thew 'newlinestrip' variable, on by default, that strips
+	  leading and trailing newlines from incoming messages.
 
 1.2.8
 	Class pings are displayed differently now
